grafana/service-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 3000        # Service port
      targetPort: 3000  # Pod port
  type: ClusterIP
